--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "package-select-menu",
-  "version": "8.0.0",
+  "version": "12.0.0",
   "description": "This is a library to create a list of words",
-  "main": ".build/index.js",
+  "main": ".dist/index.js",
+  "module": "dist/index.js",
+  "files": [ "dist", "README.md" ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eden1207/package-selectmenu"
+  },
+  "keywords": ["react", "component", "select menu"],
   "author": "eden1207",
   "license": "ISC",
   "private": false,
@@ -18,7 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "prebuild": "rimraf dist",
+    "build": "cross-env NODE_ENV=production babel src --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,6 +52,8 @@
     "@babel/cli": "^7.22.9",
     "@babel/core": "^7.22.9",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.22.9"
+    "@babel/preset-env": "^7.22.9",
+    "cross-env": "^7.0.3",
+    "rimraf": "^5.0.1"
   }
 }
