--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "package-select-menu",
-  "version": "12.0.0",
+  "version": "13.0.0",
   "description": "This is a library to create a list of words",
-  "main": ".dist/index.js",
+  "main": "dist/index.js",
   "module": "dist/index.js",
-  "files": [ "dist", "README.md" ],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/eden1207/package-selectmenu"
   },
-  "keywords": ["react", "component", "select menu"],
+  "keywords": [
+    "react",
+    "component",
+    "select menu"
+  ],
   "author": "eden1207",
   "license": "ISC",
   "private": false,
@@ -21,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
